corrected name in acknowledgements, shuffled picture layout order. Implem,ented dissapearing mini-links on tablet & desktop  screens. Other minor fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ ul li a:hover {
     margin-bottom: 10px;
     border-radius: 10px;
     padding: 10px;
+    overflow: hidden;
 }
 /* Site row content spacer */
 .spacer h1 {
@@ -154,6 +155,7 @@ ul li a:hover {
     width: 100%;
     height: auto;
     border-radius: 10px;
+    overflow: hidden;
 }
 /* Put some form on the trailer video */
 #video-form {
@@ -199,11 +201,12 @@ ul li a:hover {
 }
 .main-content a {
     color: #319fa6;
+    font-size: 1rem;
 }
 /* make lower nav-icons pop */
 .main-content a:hover {
     color: #319fa6;
-    font-size: 1.5rem;
+    font-size: .75rem;
 }
 /* Ensure contact form with uses maximum width space in container */
 .contact-form {
@@ -231,8 +234,8 @@ ul li a:hover {
     -webkit-transition-duration: .5s;
     -o-transition-duration: .5s;
     transition-duration: .5s;
-    font-size: 3em;
-    padding: 5px 5px;
+    font-size: 2.25em;
+    padding-left:5px;
 }
 /* class for some text to stand out */
 .stand-out-this {
